# AutoSlides-Extractor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_zh-CN.md  resources.qrc  vcpkg.json
.github/workflows/: build-windows.yml
installer/: AutoSlidesExtractor.nsi  license.txt
resources/: AutoSlidesExtractor.rc  app_icon.rc  icon.icns
resources/models/: model_info.json
src/: chunkprocessor.cpp  chunkprocessor.h  configmanager.cpp  configmanager.h  gpuacceleration.cpp  gpuacceleration.h  hardwaredecoder.cpp  hardwaredecoder.h  imageiohelper.h  main.cpp  mainwindow.cpp  mainwindow.h  memoryoptimizer.cpp  memoryoptimizer.h  mlclassifier.cpp  mlclassifier.h  optimizationmanager.cpp  optimizationmanager.h  pdfmakerdialog.cpp  pdfmakerdialog.h  performancemonitor.cpp  performancemonitor.h  phashcalculator.cpp  phashcalculator.h  platformdetector.cpp  platformdetector.h  postprocessor.cpp  postprocessor.h  processingthread.cpp  processingthread.h  rangeslider.cpp  rangeslider.h  settingsdialog.cpp  settingsdialog.h  slidedetector.cpp  slidedetector.h  slideitemwidget.cpp  slideitemwidget.h  ssimcalculator.cpp  ssimcalculator.h  (+15 more)
